fix: conter escrita excessiva da telemetria